[package]
name = "opc-identity"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "SPIFFE Workload Identity and SVID reload support for OpenPacketCore"


readme = "README.md"
documentation = "https://docs.rs/opc-identity"
keywords = ["5g", "cnf", "spiffe", "telecom", "packet-core"]
categories = ["network-programming", "cryptography"]
[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "net", "time", "rt", "io-util", "fs"] }
tracing = { workspace = true }
x509-parser = { workspace = true }
rustls-pki-types = { workspace = true }
rustls = { workspace = true }
time = { workspace = true }
sha2 = { workspace = true }
opc-types = { path = "../opc-types", version = "0.2.0" }

[dev-dependencies]
rcgen = { workspace = true }

[lints]
workspace = true