[package]
name = "opc-ipsec-lb"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Pure IPsec/IKE SWu load-balancing primitives, ports, and conformance tests for OpenPacketCore"
readme = "README.md"
documentation = "https://docs.rs/opc-ipsec-lb"
keywords = ["5g", "ipsec", "ikev2", "load-balancing", "packet-core"]
categories = ["network-programming"]
publish = false

[dependencies]
opc-ipsec-lb-ebpf-common = { path = "../opc-ipsec-lb-ebpf-common", version = "0.2.0" }
opc-linux-gtpu-sys = { path = "../opc-linux-gtpu-sys", version = "0.2.0" }
opc-route-steering = { path = "../opc-route-steering", version = "0.2.0" }
opc-session-store = { path = "../opc-session-store", version = "0.2.0" }
opc-types = { path = "../opc-types", version = "0.2.0" }
async-trait = { workspace = true }
bytes = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt"] }

[target.'cfg(target_os = "linux")'.dependencies]
aya = { version = "0.14" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
